# SocialMediaManager

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_leads_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  auth.py  comments.py  content.py  dashboard.py  leads.py  platforms.py  posts.py  schedules.py
backend/app/models/: __init__.py  analytics_snapshot.py  comment.py  content_source.py  generated_post.py  lead.py  platform_account.py  published_post.py  schedule.py  user.py
backend/app/schemas/: analytics.py  auth.py  comment.py  content.py  lead.py  platform.py  post.py  schedule.py
backend/app/services/ai_generator/: client.py  generator.py  prompts.py
backend/app/services/comments/: auto_reply.py  classifier.py  fetcher.py  reply_generator.py
backend/app/services/content_research/: aggregator.py  base.py  devto.py  (+4 more)
backend/app/tasks/: analytics_tasks.py  celery_app.py  comment_tasks.py  generation_tasks.py  profile_tasks.py  publishing_tasks.py  research_tasks.py
backend/app/utils/: cache.py  http_client.py  logging.py  rate_limiter.py  security.py
backend/tests/: conftest.py
backend/tests/test_api/: test_analytics.py  test_auth.py  test_comments.py  test_content.py  test_leads.py  test_platforms.py  test_posts.py  test_schedules.py
backend/tests/test_utils/: test_cache.py  test_rate_limiter.py  test_security.py
(+107 files in other folders)
