[project]
name = "social-media-manager"
version = "1.0.0"
description = "AI-powered social media management platform"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tasks/celery_app.py", "*/tests/*"]
